# xdumper

./: .env.example  .gitignore  .mise.toml  CLAUDE.md  README.md  pyproject.toml
xdumper/: __init__.py  cli.py  config.py  storage.py
xdumper/twitter/: __init__.py  list_scraper.py  url_parser.py
xdumper/twitter/backends/: __init__.py  base.py  patchright_backend.py  twscrape_backend.py
