[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xdumper"
version = "0.1.0"
description = "X/Twitter list and user profile scraper"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Thomas" },
]
keywords = ["twitter", "x", "scraper", "twscrape"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0",
    "twscrape>=0.12.0",
    "patchright>=1.56.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
xdumper = "xdumper.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["xdumper"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
